@@ -2,7 +2,7 @@ name = Plack-Middleware-DebugLogging
 author = Matthew Phillips <mattp@cpan.org>
 license = Perl_5
 copyright_holder = Matthew Phillips <mattp@cpan.org>
-version = 0.001003
+version = 0.001004
 
 [@Basic]
 
@@ -17,10 +17,8 @@ add_files_in = dist.ini
 add_files_in = README.mkdn
 [PodWeaver]
 
-[MetaResources]
-repository.url = git://github.com/mattp-/Plack-Middleware-DebugLogging.git
-repository.web = https://github.com/mattp-/Plack-Middleware-DebugLogging
-repository.type = git
+[GithubMeta]
+issues = 1
 
 [CheckChangeLog]
 [PkgVersion]
