@@ -1,6 +1,7 @@
 use strict;
 use warnings;
 use Test::More;
+use Test::LongString;
 use HTTP::Request::Common;
 use Plack::Test;
 use Plack::Builder;
@@ -88,6 +89,35 @@ LOG
 , 'combinations of body and query params work.';
 }
 
+{
+    $log = '';
+    $test_req->(POST "http://localhost", Content_Type => 'application/json', Content => '{"a": 5 }');
+is_string $log, <<LOG
+"POST" request for "/" from "127.0.0.1"
+Request Headers:
+.-----------------+------------------------------------------------------.
+| Header Name     | Value                                                |
++-----------------+------------------------------------------------------+
+| Host            | localhost                                            |
+| Content-Length  | 9                                                    |
+| Content-Type    | application/json                                     |
+'-----------------+------------------------------------------------------'
+
+application/json encoded body parameters are:
+{
+  a => 5
+}
+
+Response Code: 200; Content-Type: text/plain; Content-Length: unknown
+Response Headers:
+.-----------------+------------------------------------------------------.
+| Header Name     | Value                                                |
++-----------------+------------------------------------------------------+
+| Content-Type    | text/plain                                           |
+'-----------------+------------------------------------------------------'
+
+LOG
+, 'json body with content-type set deserialized properly'};
 # Testing streaming responses
 
 $log = "";
